[gd_scene load_steps=5 format=3 uid="uid://ckk6m8k6cuitl"]

[ext_resource type="Script" uid="uid://c2sx5s4ceho4o" path="res://Scenes/GUI/Inventory/inv_slot.gd" id="2_16du2"]
[ext_resource type="Texture2D" uid="uid://jkvuk8dqygjb" path="res://Assets/art/IGGItemIcons/Iron Sword.png" id="3_xlgcl"]
[ext_resource type="Theme" uid="uid://bxj3jchl1trm8" path="res://Assets/Themes/default.tres" id="4_ls2f0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vsg4y"]

[node name="InvSlot" type="Button"]
custom_minimum_size = Vector2(32, 32)
offset_right = 32.0
offset_bottom = 32.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_vsg4y")
button_mask = 2
script = ExtResource("2_16du2")

[node name="ItemIcon" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_xlgcl")

[node name="ItemQuantityLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -6.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("4_ls2f0")
text = "99"
horizontal_alignment = 2
vertical_alignment = 2
